full-moon/tests/roblox_cases/fail/parser/generic_string/error_display.snap
---
source: full-moon/tests/fail_cases.rs
expression: "String::from_utf8(output.into_inner()).unwrap()"
---
error[ast]: unexpected token, this needs to be a statement
  ┌─ source.lua:1:17
  │
1 │ type Foo = "bar"<number>
  │                 ^

error[ast]: unexpected expression when looking for a statement
  ┌─ source.lua:1:24
  │
1 │ type Foo = "bar"<number>
  │                        ^

error[ast]: unexpected token, this needs to be a statement
  ┌─ source.lua:1:24
  │
1 │ type Foo = "bar"<number>
  │                        ^


